--- a/index.html
+++ b/index.html
@@ -1,169 +1,177 @@
+LAYTH AMER ALI, [2/11/2026 9:53 PM]
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مزرعة ابو سيف وابو نمر | الفخامة والذكاء</title>
+    <title>مزرعة ابو سيف وابو نمر الترفيهية | نظام الحجز الذكي</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Cairo', sans-serif; background-color: #f8fafc; }
-        .hero-bg { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
+        body { font-family: 'Cairo', sans-serif; scroll-behavior: smooth; background-color: #f8fafc; }
+        .hero-gradient { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
+        .glass-effect { background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); }
+        .photo-card { transition: all 0.4s ease; border: 1px solid #e2e8f0; }
+        .photo-card:hover { transform: translateY(-10px); box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1); }
     </style>
 </head>
-<body class="min-h-screen">
+<body>
 
-    <nav class="bg-white/90 backdrop-blur-md sticky top-0 z-50 border-b border-blue-100 p-4 shadow-sm">
+    <nav class="glass-effect sticky top-0 z-50 border-b border-blue-100 p-4 shadow-sm">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <span class="text-2xl font-black text-blue-900">🏠 مزرعة ابو سيف وابو نمر</span>
-            <button class="bg-blue-900 text-white px-6 py-2 rounded-full font-bold text-sm">لوحة المدير</button>
+            <div class="flex items-center gap-3">
+                <div class="w-14 h-14 bg-blue-900 rounded-2xl flex items-center justify-center text-white font-black shadow-lg transform rotate-3">
+                    AS
+                </div>
+                <div>
+                    <h1 class="text-xl font-black text-blue-900 leading-none">مزرعة ابو سيف وابو نمر</h1>
+                    <p class="text-[10px] text-blue-500 font-bold tracking-[0.2em]">الترفيهية الاستثمارية</p>
+                </div>
+            </div>
+            <button onclick="toggleAdminPanel()" class="bg-slate-800 text-white px-5 py-2 rounded-xl text-xs font-bold hover:bg-black transition-all">بوابة المدير</button>
         </div>
     </nav>
 
-    <section class="hero-bg text-white py-16 px-4 text-center">
-        <h2 class="text-4xl md:text-5xl font-extrabold mb-4">أرقى تجربة ترفيهية بلمسة ذكية 💎</h2>
-        <p class="text-blue-100 text-lg mb-8 max-w-2xl mx-auto">نظام حجز متطور وتواصل مباشر مع الذكاء الاصطناعي لخدمتكم</p>
+    <section class="max-w-7xl mx-auto p-6 my-8">
+        <div class="text-center mb-10">
+            <h2 class="text-3xl font-black text-slate-800">📸 كتالوج مرافق المزرعة</h2>
+            <p class="text-slate-500 mt-2">استعرض تفاصيل الفخامة قبل الحجز</p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="photo-card bg-white rounded-3xl overflow-hidden">
+                <div class="h-52 bg-slate-200 flex items-center justify-center text-slate-400">صورة المسبح</div>
+                <div class="p-4 text-center font-bold text-blue-900">المسبح والجاكوزي</div>
+            </div>
+            <div class="photo-card bg-white rounded-3xl overflow-hidden">
+                <div class="h-52 bg-slate-200 flex items-center justify-center text-slate-400">صورة المجالس</div>
+                <div class="p-4 text-center font-bold text-blue-900">المجالس الملكية</div>
+            </div>
+            <div class="photo-card bg-white rounded-3xl overflow-hidden">
+                <div class="h-52 bg-slate-200 flex items-center justify-center text-slate-400">صورة الحديقة</div>
+                <div class="p-4 text-center font-bold text-blue-900">الحدائق والألعاب</div>
+            </div>
+            <div class="photo-card bg-white rounded-3xl overflow-hidden">
+                <div class="h-52 bg-slate-200 flex items-center justify-center text-slate-400">صور المرفقات</div>
+                <div class="p-4 text-center font-bold text-blue-900">المطبخ والخدمات</div>
+            </div>
+        </div>
     </section>
 
-    <main class="max-w-4xl mx-auto p-6 -mt-12">
-        <div class="bg-white rounded-[2rem] shadow-2xl p-8 border border-blue-50">
-            <h3 class="text-2xl font-bold text-blue-900 mb-8 border-b pb-4">📝 طلب حجز (يومي / نصف يومي)</h3>
-            
-            <form class="space-y-6">
-                <div>
-                    <label class="block text-gray-700 font-bold mb-2">الاسم الكامل للمستأجر</label>
-                    <input type="text" placeholder="الاسم الثلاثي كما في الهوية" class="w-full p-4 border-2 border-gray-100 rounded-2xl outline-none focus:border-blue-500 bg-gray-50">
+    <main class="max-w-4xl mx-auto p-4 mb-20">
+        <div class="bg-white rounded-[2.5rem] shadow-2xl overflow-hidden border border-slate-100">
+            <div class="hero-gradient p-10 text-white text-center">
+                <h3 class="text-3xl font-black mb-2">تأكيد الحجز الذكي</h3>
+                <p class="text-blue-100">السعر الحالي: <span id="displayPrice" class="text-yellow-400 font-bold">250,000 دينار</span></p>
+            </div>
+
+            <form class="p-8 space-y-6" id="bookingForm">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">الاسم الكامل للمستأجر</label>
+
+LAYTH AMER ALI, [2/11/2026 9:53 PM]
+<input type="text" id="name" required placeholder="الاسم كما في البطاقة" class="w-full p-4 border rounded-2xl outline-none focus:ring-2 focus:ring-blue-500 bg-slate-50">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">رقم الهاتف (واتساب)</label>
+                        <input type="tel" id="phone" required placeholder="07XXXXXXXX" class="w-full p-4 border rounded-2xl outline-none focus:ring-2 focus:ring-blue-500 bg-slate-50">
+                    </div>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
-                        <label class="block text-gray-700 font-bold mb-2">نوع المستأجر</label>
-                        <select class="w-full p-4 border-2 border-gray-100 rounded-2xl bg-white"><option>👨‍👩‍👧‍👦 عائلة</option><option>👬 شباب</option></select>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">نوع المستأجر</label>
+                        <select class="w-full p-4 border rounded-2xl bg-white"><option>عائلة</option><option>شباب</option></select>
                     </div>
                     <div>
-                        <label class="block text-gray-700 font-bold mb-2">مدة التأجير</label>
-                        <select class="w-full p-4 border-2 border-gray-100 rounded-2xl bg-white"><option>🕒 نصف يوم</option><option>📅 يوم كامل (مبيت)</option></select>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">مدة التأجير</label>
+                        <select class="w-full p-4 border rounded-2xl bg-white"><option>يوم كامل (مبيت)</option><option>نصف يوم</option></select>
                     </div>
                 </div>
 
                 <div class="p-6 border-2 border-dashed border-blue-100 rounded-3xl bg-blue-50/30 text-center">
-                    <p class="font-bold text-blue-800 mb-4">🆔 إرفاق الوثائق الرسمية (إلزامي)</p>
-                    <div class="flex flex-wrap justify-center gap-4">
-                        <button type="button" class="bg-white border border-blue-200 px-6 py-3 rounded-xl text-sm font-bold text-blue-700 hover:bg-blue-100">📎 البطاقة الموحدة</button>
-                        <button type="button" class="bg-white border border-blue-200 px-6 py-3 rounded-xl text-sm font-bold text-blue-700 hover:bg-blue-100">📎 بطاقة السكن</button>
+                    <p class="font-bold text-blue-900 mb-4">📎 إرفاق الهوية وبطاقة السكن</p>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <input type="file" class="bg-white p-2 rounded-lg border w-full text-xs">
+                        <input type="file" class="bg-white p-2 rounded-lg border w-full text-xs">
                     </div>
                 </div>
 
-                <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 rounded-2xl text-xl shadow-lg transition-all">تأكيد طلب الحجز</button>
+                <button type="button" onclick="handleBooking()" class="w-full bg-green-600 hover:bg-green-700 text-white font-black py-5 rounded-2xl text-xl shadow-xl transition-all shadow-green-100">
+                    تأكيد الحجز والإرسال للواتساب 💬
+                </button>
             </form>
         </div>
     </main>
 
-    <div class="fixed bottom-6 left-6 z-50 text-left">
-        <button onclick="toggleChat()" class="bg-blue-900 text-white p-5 rounded-2xl shadow-2xl hover:scale-110 transition-all font-bold flex items-center gap-2">
-            <span>🤖</span> اسأل المساعد الذكي
-        </button>
-        <div id="chatBox" class="hidden w-80 h-[450px] bg-white shadow-2xl rounded-3xl border border-blue-100 flex flex-col mb-4 overflow-hidden absolute bottom-20 left-0">
-          LAYTH AMER ALI, [2/11/2026 9:29 PM]
-<div class="bg-blue-900 p-4 text-white font-bold flex justify-between">
-                <span>المساعد الذكي</span>
-                <button onclick="toggleChat()">✕</button>
+    <div id="adminPanel" class="hidden fixed inset-0 z-[100] bg-black/60 backdrop-blur-sm flex items-center justify-center p-4">
+        <div class="bg-white w-full max-w-lg rounded-[2.5rem] shadow-2xl overflow-hidden">
+            <div class="bg-slate-900 p-6 text-white flex justify-between">
+                <span class="font-black">لوحة التحكم الشاملة</span>
+                <button onclick="toggleAdminPanel()">✕</button>
             </div>
-            <div class="flex-1 p-4 bg-gray-50 text-sm overflow-y-auto">
-                <div class="bg-blue-100 text-blue-900 p-3 rounded-2xl rounded-tr-none mb-2">أهلاً بك يا فخر المزرعة! أنا الذكاء الاصطناعي الخاص بـ "ابو سيف وابو نمر". كيف أساعدك؟</div>
-            </div>
-            <div class="p-4 border-t flex gap-2"><input type="text" placeholder="اكتب هنا..." class="flex-1 text-sm outline-none"><button class="text-blue-600 font-bold">ارسل</button></div>
-        </div>
-    </div>
-
-    <script>
-        function toggleChat() { document.getElementById('chatBox').classList.toggle('hidden'); }
-    </script>
-</body>
-</html>
-
-LAYTH AMER ALI, [2/11/2026 9:31 PM]
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مزرعة ابو سيف وابو نمر | الفخامة والذكاء</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Cairo', sans-serif; background-color: #f8fafc; }
-        .hero-bg { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
-    </style>
-</head>
-<body class="min-h-screen">
-
-    <nav class="bg-white/90 backdrop-blur-md sticky top-0 z-50 border-b border-blue-100 p-4 shadow-sm">
-        <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <span class="text-2xl font-black text-blue-900">🏠 مزرعة ابو سيف وابو نمر</span>
-            <button class="bg-blue-900 text-white px-6 py-2 rounded-full font-bold text-sm">لوحة المدير</button>
-        </div>
-    </nav>
-
-    <section class="hero-bg text-white py-16 px-4 text-center">
-        <h2 class="text-4xl md:text-5xl font-extrabold mb-4">أرقى تجربة ترفيهية بلمسة ذكية 💎</h2>
-        <p class="text-blue-100 text-lg mb-8 max-w-2xl mx-auto">نظام حجز متطور وتواصل مباشر مع الذكاء الاصطناعي لخدمتكم</p>
-    </section>
-
-    <main class="max-w-4xl mx-auto p-6 -mt-12">
-        <div class="bg-white rounded-[2rem] shadow-2xl p-8 border border-blue-50">
-            <h3 class="text-2xl font-bold text-blue-900 mb-8 border-b pb-4">📝 طلب حجز (يومي / نصف يومي)</h3>
-            
-            <form class="space-y-6">
+            <div class="p-8 space-y-6">
                 <div>
-                    <label class="block text-gray-700 font-bold mb-2">الاسم الكامل للمستأجر</label>
-                    <input type="text" placeholder="الاسم الثلاثي كما في الهوية" class="w-full p-4 border-2 border-gray-100 rounded-2xl outline-none focus:border-blue-500 bg-gray-50">
+                    <label class="block font-bold mb-2">تعديل سعر الإيجار (دينار)</label>
+                    <input type="number" id="priceInput" class="w-full p-4 border rounded-xl" placeholder="السعر الجديد">
                 </div>
-
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div>
-                        <label class="block text-gray-700 font-bold mb-2">نوع المستأجر</label>
-                        <select class="w-full p-4 border-2 border-gray-100 rounded-2xl bg-white"><option>👨‍👩‍👧‍👦 عائلة</option><option>👬 شباب</option></select>
-                    </div>
-                    <div>
-                        <label class="block text-gray-700 font-bold mb-2">مدة التأجير</label>
-                        <select class="w-full p-4 border-2 border-gray-100 rounded-2xl bg-white"><option>🕒 نصف يوم</option><option>📅 يوم كامل (مبيت)</option></select>
-                    </div>
+                <div>
+                    <label class="block font-bold mb-2">تعديل تفاصيل المزرعة</label>
+                    <textarea class="w-full p-4 border rounded-xl h-24" placeholder="أدخل تفاصيل جديدة للمرافق"></textarea>
                 </div>
-
-                <div class="p-6 border-2 border-dashed border-blue-100 rounded-3xl bg-blue-50/30 text-center">
-                    <p class="font-bold text-blue-800 mb-4">🆔 إرفاق الوثائق الرسمية (إلزامي)</p>
-                    <div class="flex flex-wrap justify-center gap-4">
-                        <button type="button" class="bg-white border border-blue-200 px-6 py-3 rounded-xl text-sm font-bold text-blue-700 hover:bg-blue-100">📎 البطاقة الموحدة</button>
-                        <button type="button" class="bg-white border border-blue-200 px-6 py-3 rounded-xl text-sm font-bold text-blue-700 hover:bg-blue-100">📎 بطاقة السكن</button>
-                    </div>
-                </div>
-
-                <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 rounded-2xl text-xl shadow-lg transition-all">تأكيد طلب الحجز</button>
-            </form>
+                <button onclick="saveChanges()" class="w-full bg-blue-600 text-white py-4 rounded-xl font-black">حفظ كافة التعديلات</button>
+            </div>
         </div>
-    </main>
+    </div>
 
-    <div class="fixed bottom-6 left-6 z-50 text-left">
-        <button onclick="toggleChat()" class="bg-blue-900 text-white p-5 rounded-2xl shadow-2xl hover:scale-110 transition-all font-bold flex items-center gap-2">
-            <span>🤖</span> اسأل المساعد الذكي
+    <div class="fixed bottom-6 left-6 z-50">
+        <button onclick="toggleBot()" class="bg-blue-900 text-white p-5 rounded-2xl shadow-2xl flex items-center gap-2">
+            <span>🤖</span> <span class="font-bold text-sm">المجيب الآلي</span>
         </button>
-        <div id="chatBox" class="hidden w-80 h-[450px] bg-white shadow-2xl rounded-3xl border border-blue-100 flex flex-col mb-4 overflow-hidden absolute bottom-20 left-0">
-
-LAYTH AMER ALI, [2/11/2026 9:31 PM]
-<div class="bg-blue-900 p-4 text-white font-bold flex justify-between">
-                <span>المساعد الذكي</span>
-                <button onclick="toggleChat()">✕</button>
+        <div id="botBox" class="hidden w-80 h-96 bg-white shadow-2xl rounded-3xl border border-blue-100 flex flex-col mb-4 absolute bottom-20 left-0 overflow-hidden">
+            <div class="bg-blue-900 p-4 text-white font-bold">مساعد مزرعة ابو سيف وابو نمر</div>
+            <div class="flex-1 p-4 bg-slate-50 text-sm overflow-y-auto" id="botContent">
+                أهلاً بك! أنا المجيب الآلي. كيف أساعدك في حجز المزرعة اليوم؟
             </div>
-            <div class="flex-1 p-4 bg-gray-50 text-sm overflow-y-auto">
-                <div class="bg-blue-100 text-blue-900 p-3 rounded-2xl rounded-tr-none mb-2">أهلاً بك يا فخر المزرعة! أنا الذكاء الاصطناعي الخاص بـ "ابو سيف وابو نمر". كيف أساعدك؟</div>
-            </div>
-            <div class="p-4 border-t flex gap-2"><input type="text" placeholder="اكتب هنا..." class="flex-1 text-sm outline-none"><button class="text-blue-600 font-bold">ارسل</button></div>
         </div>
     </div>
 
     <script>
-        function toggleChat() { document.getElementById('chatBox').classList.toggle('hidden'); }
+
+LAYTH AMER ALI, [2/11/2026 9:53 PM]
+function toggleAdminPanel() {
+            const pin = prompt("أدخل رمز المدير للصلاحيات الشاملة:");
+            if(pin === "1234") document.getElementById('adminPanel').classList.toggle('hidden');
+            else if(pin !== null) alert("الرمز غير صحيح!");
+        }
+
+        function saveChanges() {
+            const price = document.getElementById('priceInput').value;
+            if(price) {
+                document.getElementById('displayPrice').innerText = price + " دينار";
+                alert("تم تحديث السعر والتفاصيل بنجاح!");
+                toggleAdminPanel();
+            }
+        }
+
+        function toggleBot() { document.getElementById('botBox').classList.toggle('hidden'); }
+
+        function handleBooking() {
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            if(!name || !phone) return alert("يرجى إكمال البيانات!");
+
+            // 6- رابط الواتساب
+            const msg = طلب حجز جديد لمزرعة ابو سيف وابو نمر الترفيهية%0Aالاسم: ${name}%0Aالهاتف: ${phone};
+            window.open(`https://wa.me/964XXXXXXXXXX?text=${msg}`, '_blank'); // استبدل XXXXX برقمك
+
+            // 7- رسالة تأكيد إتمام الحجز
+            setTimeout(() => {
+                alert("✅ تم تأكيد استلام الحجز. ستصلك رسالة تأكيد عبر الواتساب فور مراجعة المستمسكات ودفع العربون.");
+            }, 2000);
+
+            // 8- التنبيه قبل 24 ساعة (هذا يبرمج في السيرفر لاحقاً)
+        }
     </script>
 </body>
 </html>
