--- a/index.html
+++ b/index.html
@@ -1,102 +1,195 @@
-LAYTH AMER ALI, [2/11/2026 10:05 PM]
+LAYTH AMER ALI, [2/11/2026 10:08 PM]
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مزرعة ابو سيف وابو نمر الترفيهية | نظام الحجز الذكي</title>
+    <title>مزرعة ابو سيف وابو نمر الترفيهية | الفخامة والذكاء</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Cairo', sans-serif; scroll-behavior: smooth; background-color: #f8fafc; }
         .hero-gradient { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
-        .glass-effect { background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); }
-        .photo-card { transition: all 0.4s ease; border: 1px solid #e2e8f0; }
-        .photo-card:hover { transform: translateY(-10px); box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1); }
+        .photo-card { transition: all 0.4s ease; cursor: pointer; }
+        .photo-card:hover { transform: translateY(-10px); shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); }
+        .chat-bounce { animation: bounce 2s infinite; }
+        @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
     </style>
 </head>
-<body>
+<body class="min-h-screen pb-20">
 
-    <nav class="glass-effect sticky top-0 z-50 border-b border-blue-100 p-4 shadow-sm">
+    <nav class="bg-white/95 backdrop-blur-md sticky top-0 z-50 border-b border-blue-100 p-4 shadow-sm">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-3">
-                <div class="w-14 h-14 bg-blue-900 rounded-2xl flex items-center justify-center text-white font-black shadow-lg transform rotate-3">AS</div>
+                <div class="w-14 h-14 bg-blue-900 rounded-2xl flex items-center justify-center text-white font-black shadow-lg border-2 border-yellow-500 transform rotate-3">AN</div>
                 <div>
                     <h1 class="text-xl font-black text-blue-900 leading-none">مزرعة ابو سيف وابو نمر</h1>
-                    <p class="text-[10px] text-blue-500 font-bold tracking-[0.2em]">الترفيهية الاستثمارية</p>
+                    <p class="text-[10px] text-yellow-600 font-bold tracking-[0.2em] uppercase">الترفيهية - تجربة ملكية</p>
                 </div>
             </div>
-            <button onclick="toggleAdminPanel()" class="bg-slate-800 text-white px-5 py-2 rounded-xl text-xs font-bold hover:bg-black transition-all">بوابة المدير</button>
+            <button onclick="toggleAdminPanel()" class="bg-slate-900 text-white px-5 py-2 rounded-xl text-xs font-bold hover:bg-black transition-all">بوابة المدير ⚙️</button>
         </div>
     </nav>
 
     <section class="max-w-7xl mx-auto p-6 my-8">
-        <h2 class="text-3xl font-black text-center text-slate-800 mb-10">📸 كتالوج مرافق المزرعة</h2>
+        <h2 class="text-3xl font-black text-center text-slate-800 mb-10 italic">💎 فخامة المرفقات</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div class="photo-card bg-white rounded-3xl overflow-hidden"><div class="h-52 bg-slate-200 flex items-center justify-center text-slate-400">صورة المسبح</div><div class="p-4 text-center font-bold text-blue-900">المسبح والجاكوزي</div></div>
-            <div class="photo-card bg-white rounded-3xl overflow-hidden"><div class="h-52 bg-slate-200 flex items-center justify-center text-slate-400">صورة المجالس</div><div class="p-4 text-center font-bold text-blue-900">المجالس الملكية</div></div>
-            <div class="photo-card bg-white rounded-3xl overflow-hidden"><div class="h-52 bg-slate-200 flex items-center justify-center text-slate-400">صورة الحديقة</div><div class="p-4 text-center font-bold text-blue-900">الحدائق والألعاب</div></div>
-            <div class="photo-card bg-white rounded-3xl overflow-hidden"><div class="h-52 bg-slate-200 flex items-center justify-center text-slate-400">صور المرفقات</div><div class="p-4 text-center font-bold text-blue-900">المطبخ والخدمات</div></div>
+            <div class="photo-card bg-white rounded-3xl overflow-hidden shadow-md">
+                <div class="h-48 bg-blue-100 flex items-center justify-center text-blue-400 font-bold">صورة المسبح الأولمبي</div>
+                <div class="p-4 bg-white text-center font-bold text-blue-900 border-t">المسبح والجاكوزي</div>
+            </div>
+            <div class="photo-card bg-white rounded-3xl overflow-hidden shadow-md">
+                <div class="h-48 bg-blue-100 flex items-center justify-center text-blue-400 font-bold">صورة المجلس الملكي</div>
+                <div class="p-4 bg-white text-center font-bold text-blue-900 border-t">المجالس والضيافة</div>
+            </div>
+            <div class="photo-card bg-white rounded-3xl overflow-hidden shadow-md">
+                <div class="h-48 bg-blue-100 flex items-center justify-center text-blue-400 font-bold">صورة المساحات الخضراء</div>
+                <div class="p-4 bg-white text-center font-bold text-blue-900 border-t">الحدائق والألعاب</div>
+            </div>
+            <div class="photo-card bg-white rounded-3xl overflow-hidden shadow-md">
+                <div class="h-48 bg-blue-100 flex items-center justify-center text-blue-400 font-bold">صورة المطبخ والمرفقات</div>
+                <div class="p-4 bg-white text-center font-bold text-blue-900 border-t">المرفقات والخدمات</div>
+            </div>
         </div>
     </section>
 
     <main class="max-w-4xl mx-auto p-4 mb-20">
-        <div class="bg-white rounded-[2.5rem] shadow-2xl overflow-hidden border border-slate-100">
+        <div class="bg-white rounded-[3rem] shadow-2xl overflow-hidden border border-blue-50">
             <div class="hero-gradient p-10 text-white text-center">
-                <h3 class="text-3xl font-black mb-2">تأكيد الحجز الذكي</h3>
-                <p class="text-blue-100">السعر الحالي: <span id="displayPrice" class="text-yellow-400 font-bold">250,000 دينار</span></p>
+                <h3 class="text-3xl font-black mb-2">نظام الحجز الذكي</h3>
+                <p class="text-blue-100 font-bold italic">السعر الحالي: <span id="displayPrice" class="text-yellow-400">250,000 دينار</span></p>
             </div>
-            <form class="p-8 space-y-6">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div><label class="block text-sm font-bold text-slate-700 mb-2">الاسم الكامل</label><input type="text" id="name" required class="w-full p-4 border rounded-2xl outline-none focus:ring-2 focus:ring-blue-500 bg-slate-50"></div>
-                    <div><label class="block text-sm font-bold text-slate-700 mb-2">رقم الهاتف (واتساب)</label><input type="tel" id="phone" required class="w-full p-4 border rounded-2xl outline-none focus:ring-2 focus:ring-blue-500 bg-slate-50"></div>
+
+            <form class="p-8 space-y-6" id="bookingForm">
+
+LAYTH AMER ALI, [2/11/2026 10:08 PM]
+<div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">الاسم الكامل</label>
+                        <input type="text" id="custName" required placeholder="الاسم الثلاثي" class="w-full p-4 border rounded-2xl focus:ring-2 focus:ring-blue-500 bg-slate-50 outline-none">
+                    </div>
+                    <div>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">رقم الهاتف (واتساب) 📱</label>
+                        <input type="tel" id="custPhone" required placeholder="07XXXXXXXX" class="w-full p-4 border rounded-2xl focus:ring-2 focus:ring-blue-500 bg-slate-50 outline-none">
+                    </div>
                 </div>
 
-LAYTH AMER ALI, [2/11/2026 10:05 PM]
-<div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div><label class="block text-sm font-bold text-slate-700 mb-2">نوع المستأجر</label><select class="w-full p-4 border rounded-2xl bg-white"><option>عائلة</option><option>شباب</option></select></div>
-                    <div><label class="block text-sm font-bold text-slate-700 mb-2">مدة الحجز</label><select class="w-full p-4 border rounded-2xl bg-white"><option>يوم كامل</option><option>نصف يوم</option></select></div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">نوع المستأجر</label>
+                        <select class="w-full p-4 border rounded-2xl bg-white outline-none"><option>👨‍👩‍👧‍👦 عائلة</option><option>👬 شباب</option></select>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-bold text-slate-700 mb-2">مدة التأجير</label>
+                        <select class="w-full p-4 border rounded-2xl bg-white outline-none"><option>🕒 نصف يوم</option><option>📅 يوم كامل (مبيت)</option></select>
+                    </div>
                 </div>
-                <button type="button" onclick="handleBooking()" class="w-full bg-green-600 text-white font-black py-5 rounded-2xl text-xl shadow-xl transition-all">إرسال للواتساب 💬</button>
+
+                <div class="p-6 border-2 border-dashed border-blue-200 rounded-[2rem] bg-blue-50 text-center">
+                    <p class="font-bold text-blue-900 mb-4">🆔 إرفاق المستمسكات (البطاقة الموحدة + السكن)</p>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <input type="file" class="bg-white p-2 rounded-xl border w-full text-xs">
+                        <input type="file" class="bg-white p-2 rounded-xl border w-full text-xs">
+                    </div>
+                </div>
+
+                <button type="button" onclick="sendWhatsApp()" class="w-full bg-green-600 hover:bg-green-700 text-white font-black py-5 rounded-2xl text-xl shadow-xl transition-all active:scale-95">
+                    تأكيد الحجز والإرسال عبر الواتساب 💬
+                </button>
             </form>
         </div>
     </main>
 
     <div id="adminPanel" class="hidden fixed inset-0 z-[100] bg-black/60 backdrop-blur-sm flex items-center justify-center p-4">
         <div class="bg-white w-full max-w-lg rounded-[2.5rem] shadow-2xl overflow-hidden">
-            <div class="bg-slate-900 p-6 text-white flex justify-between"><span class="font-black">لوحة التحكم الشاملة</span><button onclick="document.getElementById('adminPanel').classList.add('hidden')">✕</button></div>
+            <div class="bg-slate-900 p-6 text-white flex justify-between items-center">
+                <span class="font-black">⚙️ لوحة تحكم المدير</span>
+                <button onclick="document.getElementById('adminPanel').classList.add('hidden')" class="text-xl">✕</button>
+            </div>
             <div class="p-8 space-y-6">
-                <div><label class="block font-bold mb-2">تعديل السعر (دينار)</label><input type="number" id="priceInput" class="w-full p-4 border rounded-xl"></div>
-                <button onclick="saveChanges()" class="w-full bg-blue-600 text-white py-4 rounded-xl font-black">حفظ التغييرات</button>
+                <div>
+                    <label class="block font-bold mb-2">تعديل سعر الإيجار</label>
+                    <input type="number" id="priceInput" class="w-full p-4 border rounded-xl" placeholder="أدخل السعر الجديد">
+                </div>
+                <div>
+                    <label class="block font-bold mb-2">تعديل تفاصيل المزرعة</label>
+                    <textarea class="w-full p-4 border rounded-xl h-24" placeholder="أدخل التعديلات الجديدة..."></textarea>
+                </div>
+                <button onclick="saveAdminChanges()" class="w-full bg-blue-600 text-white py-4 rounded-xl font-black">حفظ كافة التغييرات</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="fixed bottom-6 left-6 z-50">
+        <button onclick="toggleBot()" class="bg-blue-900 text-white p-5 rounded-3xl shadow-2xl flex items-center gap-2 chat-bounce">
+            <span class="text-2xl">🤖</span>
+            <span class="font-bold text-sm">اسأل المساعد الذكي</span>
+        </button>
+
+LAYTH AMER ALI, [2/11/2026 10:08 PM]
+<div id="botBox" class="hidden w-80 h-[450px] bg-white shadow-2xl rounded-[2rem] border-2 border-blue-50 flex flex-col mb-4 absolute bottom-20 left-0 overflow-hidden">
+            <div class="bg-blue-900 p-5 text-white font-bold flex justify-between items-center">
+                <span>🤖 مساعد ابو سيف وابو نمر</span>
+                <button onclick="toggleBot()">✕</button>
+            </div>
+            <div class="flex-1 p-5 bg-slate-50 text-sm overflow-y-auto space-y-4" id="botMessages">
+                <div class="bg-blue-100 text-blue-900 p-3 rounded-2xl rounded-tr-none">
+                    أهلاً بك! أنا الذكاء الاصطناعي لمزرعة ابو سيف وابو نمر. كيف أساعدك في حجزك اليوم؟
+                </div>
+            </div>
+            <div class="p-4 border-t bg-white flex gap-2">
+                <input type="text" id="botInput" placeholder="اسألني أي شيء..." class="flex-1 outline-none text-xs">
+                <button onclick="botAnswer()" class="text-blue-600 font-bold">ارسل</button>
             </div>
         </div>
     </div>
 
     <script>
+        // وظائف بوابة المدير
         function toggleAdminPanel() {
             const pin = prompt("أدخل رمز المدير للصلاحيات الشاملة:");
-            if(pin === "1234") {
-                document.getElementById('adminPanel').classList.remove('hidden');
-            } else if(pin !== null) {
-                alert("الرمز غير صحيح!");
-            }
+            if(pin === "1234") document.getElementById('adminPanel').classList.remove('hidden');
+            else if(pin !== null) alert("الرمز غير صحيح!");
         }
 
-        function saveChanges() {
+        function saveAdminChanges() {
             const price = document.getElementById('priceInput').value;
             if(price) {
                 document.getElementById('displayPrice').innerText = price + " دينار";
-                alert("تم تحديث السعر بنجاح!");
+                alert("تم تحديث السعر والتفاصيل بنجاح!");
                 document.getElementById('adminPanel').classList.add('hidden');
             }
         }
 
-        function handleBooking() {
-            const name = document.getElementById('name').value;
-            const phone = document.getElementById('phone').value;
-            if(!name || !phone) return alert("يرجى إكمال البيانات!");
-            const msg = طلب حجز جديد لمزرعة ابو سيف وابو نمر%0Aالاسم: ${name}%0Aالهاتف: ${phone};
-            window.open(`https://wa.me/964XXXXXXXXXX?text=${msg}`, '_blank');
+        // وظائف بوت الذكاء الاصطناعي
+        function toggleBot() { document.getElementById('botBox').classList.toggle('hidden'); }
+        
+        function botAnswer() {
+            const input = document.getElementById('botInput');
+            const messages = document.getElementById('botMessages');
+            if(input.value.trim() !== "") {
+                messages.innerHTML += <div class="bg-gray-200 p-3 rounded-2xl rounded-tl-none self-end text-xs">${input.value}</div>;
+                setTimeout(() => {
+                    messages.innerHTML += <div class="bg-blue-100 text-blue-900 p-3 rounded-2xl rounded-tr-none text-xs">شكراً لسؤالك! بخصوص "${input.value}"، يمكنك التواصل معنا مباشرة عبر الواتساب للحصول على أدق التفاصيل حالياً.</div>;
+                    messages.scrollTop = messages.scrollHeight;
+                }, 1000);
+                input.value = "";
+            }
+        }
+
+        // وظائف الواتساب والإشعارات
+        function sendWhatsApp() {
+            const name = document.getElementById('custName').value;
+            const phone = document.getElementById('custPhone').value;
+            if(!name || !phone) return alert("يرجى إكمال الاسم ورقم الهاتف!");
+
+            const msg = طلب حجز جديد لمزرعة ابو سيف وابو نمر الترفيهية%0Aالاسم: ${name}%0Aالهاتف: ${phone};
+            window.open(`https://wa.me/964XXXXXXXXXX?text=${msg}`, '_blank'); // ضع رقمك هنا
+
+            // إشعار إتمام الحجز
+            setTimeout(() => {
+                alert("✅ شكراً لك! تم استلام طلب الحجز. ستصلك رسالة تأكيد رسمية وتذكير قبل موعد الحجز بـ 24 ساعة.");
+            }, 2000);
         }
     </script>
 </body>
